# taihang-protocols

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: bench_alsz_ote.cpp  bench_cwprf_mqrpmt.cpp  bench_elgamal.cpp  bench_naor_pinkas_ot.cpp
include/taihang/mpc/ot/: alsz_ote.hpp  naor_pinkas_ot.hpp
include/taihang/mpc/rpmt/: cwprf_mqrpmt.hpp
include/taihang/pke/: elgamal.hpp  twisted_elgamal.hpp
source/mpc/ot/: alsz_ote.cpp  naor_pinkas_ot.cpp
source/mpc/rpmt/: cwprf_mqrpmt.cpp
source/pke/: elgamal.cpp  twisted_elgamal.cpp
tests/: test_alsz_ote.cpp  test_cwprf_mqrpmt.cpp  test_elgamal.cpp  test_naor-pinkas_ot.cpp  test_twisted_elgamal.cpp
